# simple-ml-models

./: LICENSE  README.md  pyproject.toml
examples/: example_01.ipynb  example_01.py  knn_example.py
simple_ml_models/: knn.py  linear_regression.py
